@@ -283,7 +283,7 @@ END
 
 // Icon with lowest ID value placed first to ensure application icon
 // remains consistent on all systems.
-IDW_MAIN                 ICON                   "res/mdi.ico"
+IDW_MAIN                ICON                    "res/mdi.ico"
 IDI_VIEW                ICON                    "res/view.ico"
 IDI_RECT                ICON                    "res/rect.ico"
 IDI_MAX                 ICON                    "res/max.ico"
